// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Input 1`] = `
<DocumentFragment>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="sampleName"
    >
      Sample label
    </label>
    <input
      class="form-control"
      id="sampleName"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`renders Input with errors 1`] = `
<DocumentFragment>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="sampleName"
    >
      Sample label
    </label>
    <input
      class="form-control is-invalid"
      id="sampleName"
      type="text"
      value=""
    />
    <div
      class="invalid-feedback"
    >
      Sample error
    </div>
  </div>
</DocumentFragment>
`;
